Fixed faulty __iter__ overload in voxels.py which was causing glitches in the render. Also made __delitem__ call the on_destroy hook in WorldBase.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 DepthConfusion.dir=.
 java.lib.path=
 main.file=test.py
-platform.active=Python_2.7.5+
+platform.active=Python_2.7.8
 python.lib.path=
